<resources>
    <string name="app_name">Student_Manage_System</string>
    <string name="enter_marks">Enter marks</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_rollno">Enter RollNo</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="veiw">Veiw</string>
    <string name="view_all">View All</string>
    <string name="show">Show</string>
</resources>
